--- a/login.html
+++ b/login.html
@@ -15,11 +15,44 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script type="module" src="js/firebase.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
     <script src="js/shared_layout.js"></script>
     <link rel="stylesheet" href="css/login.css">
 
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBeOEuEKJ6RIxlYjUyAyImN6dp63zvAE4k",
+            authDomain: "f2e-final-16079.firebaseapp.com",
+            projectId: "f2e-final-16079",
+            storageBucket: "f2e-final-16079.appspot.com",
+            messagingSenderId: "717088954690",
+            appId: "1:717088954690:web:7a3f336707928485cf10db",
+            measurementId: "G-QY4TYEPS8K"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
 
+        let auth = firebase.auth();
+        $(function () {
+            const $email = $("#email");
+            const $password = $("#password");
+            $("form").submit(function (e) {
+                e.preventDefault();
+                auth.signInWithEmailAndPassword($email.val(), $password.val())
+                    .then(() => {
+                        // console.log(auth.currentUser.displayName)
+                        window.location.href = "index.html";
+                    }).catch((e) => {
+                        alert(e.message);
+                    });
+
+
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -28,7 +61,7 @@
     <main class="container d-flex flex-column align-items-center gap-5 mb-2 _main">
         <div class="my-2"></div>
         <h1 class="mt-5">登入</h1>
-        <div class="_inputs d-flex flex-column justify-content-between align-items-center gap-3 mb-5">
+        <form class="_inputs d-flex flex-column justify-content-between align-items-center gap-3 mb-5">
             <div class="d-flex flex-column">
                 <label for="email">帳號</label>
                 <input type="email" name="email" id="email" placeholder="example@mail.com">
@@ -38,9 +71,9 @@
                 <input type="password" name="password" id="password" placeholder="password">
             </div>
             <a class="align-self-end _reset" href="#">忘記密碼？</a>
-        </div>
+            <button class="_btn _btn-main" type="submit">登入</button>
+        </form>
         <div class="_actions d-flex flex-column align-items-center">
-            <a class="_btn" role="button" href="#">登入</a>
             <span class="mb-2">還沒有帳號？</span>
             <a class="_btn" href="register.html">註冊</a>
             <span class="_otherway-label mb-3">其他登入方式</span>
