--- a/games_detail.html
+++ b/games_detail.html
@@ -19,6 +19,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
     <script src="js/shared_layout.js"></script>
     <link rel="stylesheet" href="css/games_detail.css">
@@ -102,7 +103,7 @@
                         </h5>
                         <p class="card-text _card-text" id="game-desc"></p>
                     </div>
-                    <a class="_detail-link d-none" id="game-link" href="#">試玩看看</a>
+                    <a class="_detail-link d-none" id="game-link" href="trynow.html">試玩看看</a>
                 </div>
             </div>
         </div>
