--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
     <div class="d-flex flex-wrap">
       <div class="_main">
         <div class="_guide">
-          <h2>簡介</h2>
+          <h2>桌遊</h2>
           <span>
-            桌遊是為了磨滅人與人之間的距離而重新發展的產業，但並不該被物理上的距離所侷限，藉由現在最便捷的網路平台，更能與來自世界各地的gamer相識真正做到拉近人與人之間的距離
+            桌遊是為了磨滅人與人之間的距離而重新發展的產業，但並不該被物理上的距離所侷限，藉由現在最便捷的網路平台，更能與來自世界各地的gamer相識真正做到拉近人與人之間的距離。<br>遊戲是一種語言，一種如同肢體語言般，通行於世界的話語，即使素不相識也能藉由遊戲打成一片。
           </span>
         </div>
         <div class="_news w-100">
