--- a/shared_layout.html
+++ b/shared_layout.html
@@ -5,7 +5,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand _navbar-brand" href="index.html">線上桌遊對戰</a>
+        <a class="navbar-brand _navbar-brand" href="index.html">線上桌遊對戰吧</a>
         <a class="_navbar-search align-self-center order-lg-1" href="#"><span class="iconify "
                 data-icon="fa-solid:search" style="color: #EFE7C9; font-size: 24px;"></span></a>
 
@@ -42,7 +42,7 @@
 </nav>
 
 <footer class="w-100 ">
-    <span class="_footer-brand">線上桌遊對戰</span>
+    <span class="_footer-brand">線上桌遊對戰吧</span>
     <div class="row gy-4 container-fluid">
         <div class="_footer-linkgroup col-12 col-md-6 col-lg-5">
             <span class="_footer-grouptitle">外部網站</span>
@@ -73,5 +73,5 @@
             </div>
         </div>
     </div>
-    <div class="_footer-cr"><span>© 2021 線上桌遊對戰</span></div>
+    <div class="_footer-cr"><span>© 2021 線上桌遊對戰吧</span></div>
 </footer>
